# public-detective

./: .bandit-migrations.yaml  .coveragerc  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .tflint.hcl  .tool-versions  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  alembic.ini  analysis_debug.html  build_dist.py  check_db.py  codecov.yml  coverage_report.txt  docker-compose.yaml  e2e_logs.txt  extract_showcase_data.py  problem  purge_subscription.py  pyproject.toml  pytest.ini  read_pdf.py  sample_analysis.json  sample_procurement.json  schema.sql  seed_data.py  test.py
.github/: CODEOWNERS  SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: add-co-author-to-pr-body.yml  add-co-author.yml  check-co-author.yml  ci.yml  co-author-on-approve.yml  release.yml  showcase.yml  validation.yml
docs/: intelligent_budget_analysis.md  structured_risk_score_rationale_proposal.md
linting/: pyproject.toml
linting/local_linters/: __init__.py  flake8_no_hash_comments.py
showcase/: data.js  index.html  script.js  style.css
source/cli/: __main__.py  commands.py
source/cli/controllers/: analysis.py
source/cli/services/: analysis.py
source/constants/: analysis_feedback.py
source/exceptions/: __init__.py  analysis.py
source/infrastructure/: README.md  artifact_registry.hcl  cloud_run_api.hcl  cloud_run_worker.hcl  cloud_sql.hcl  gcs.hcl  logging.hcl  pubsub.hcl  root.hcl  scheduler.hcl  service_account_api.hcl  service_account_cicd.hcl  service_account_scheduler.hcl  service_account_worker.hcl  terragrunt.hcl  vpc.hcl  vpc_access_connector.hcl
source/infrastructure/cloudrun/: terragrunt.hcl
source/infrastructure/database/: .terraform.lock.hcl  terragrunt.hcl
source/infrastructure/dns/: terragrunt.hcl
source/infrastructure/registry/: terragrunt.hcl
source/infrastructure/vpc/: terragrunt.hcl
source/migrations/: env.py  helpers.py
source/migrations/versions/: 2025_07_26_1730-ce0a16ca8b96_create_procurement_analysis_table.py  2025_08_23_1053-add_document_hash.py  2025_08_23_1130-add_new_analysis_columns.py  2025_08_24_1628-98d6cf46a2cc_change_analysis_date_to_timestamp_with_.py  2025_08_24_1712-a127ce3b1eef_create_user_table.py  2025_08_26_0216-62e99b239b83_create_gcs_paths_for_analysis_artifacts.py  2025_08_26_0218-0ce1492408b3_create_file_record_table.py  2025_08_26_0218-8936e48e6ea9_add_id_to_procurement_analysis.py  2025_08_26_0219-9595c4dc19b4_create_procurement_table.py  2025_08_27_2111-67757d277ba1_add_raw_data_to_procurement.py  2025_08_27_2112-2c1f65fa9ba8_add_status_and_cost_to_procurement_.py  2025_08_28_1234-fase1vers_versioning_and_preanalysis.py  2025_08_28_1235-fase1view_create_view.py  2025_08_28_1236-add_content_hash_to_procurement.py  2025_08_28_1237-fix_analysis_unique_constraint.py  2025_08_28_1238-add_timestamps_to_analysis.py  2025_08_31_0222-014b9fad2247_rename_tables_to_plural.py  2025_08_31_1125-306b4a0d0604_migrate_status_to_enum.py  2025_08_31_1207-f66aba35044e_drop_procurement_overall_status_view.py  2025_08_31_1434-b7179b0a29e7_create_initial_schema.py  2025_08_31_1907-6d9b7c751661_create_procurement_analysis_status_.py  2025_08_31_2356-2aa712e9bc2a_remove_cost_and_add_token_usage_to_.py  2025_08_31_2356-9594c79c1cd3_add_summary_fields_to_procurement_.py  2025_08_31_2356-9594c79c1cd3_initial_migrations_.py  2025_09_01_1606-130661653c2d_create_votes_table_and_add_votes_count_.py
source/models/: analyses.py  analysis.py  budget_ledger.py  budget_ledgers.py  donations.py  file_record.py  file_records.py  procurement.py  procurement_analysis_status.py  procurements.py
source/providers/: ai.py  ai_mock.py  config.py  credentials.py  database.py  date.py  gcs.py  logging.py  pubsub.py  retry.py
source/public_detective/cli/: __init__.py  __main__.py  analysis.py  commands.py  config.py  db.py  progress.py  ranking.py  serve.py  web.py  worker.py
source/public_detective/constants/: analysis_feedback.py
source/public_detective/migrations/: env.py  helpers.py  script.py.mako
source/public_detective/models/: analyses.py  candidates.py  enums.py  file_records.py  procurement_analysis_status.py  procurements.py  source_documents.py
source/public_detective/providers/: ai.py  config.py  config_manager.py  database.py  file_type.py  gcs.py  http.py  image_converter.py  logging.py  office_converter.py  pubsub.py  secrets.py
source/public_detective/repositories/: analyses.py  budget_ledger.py  file_records.py  procurements.py  source_documents.py  status_histories.py
source/public_detective/services/: __init__.py  analysis.py  converter.py  cost_calculator.py  pricing.py  pricing_service.py  ranking.py  ranking_config.py
source/public_detective/web/: app.py  main.py  pages.py  presentation.py  strings.py  templates_config.py
source/public_detective/worker/: __main__.py  subscription.py
source/repositories/: analyses.py  analysis.py  budget_ledger.py  file_record.py  file_records.py  procurement.py  procurements.py  status_history.py  token_prices.py
source/services/: analysis.py
source/worker/: __main__.py  subscription.py  test_analysis_from_db.py
tests/: conftest.py
tests/e2e/: README.md  conftest.py  test_database_inspection.py  test_debug_conversion.py  test_file_extensions.py  test_full_e2e.py  test_gcs_cleanup_e2e.py  test_pre_analyze.py  test_ranking_e2e.py  test_ranking_priority_e2e.py  test_token_counting.py  test_vertex_ai.py  test_worker.py  test_worker_flow.py
tests/fixtures/: example.ai  seed.sql
tests/integration/: test_analysis_flow.py  test_full_flow.py
tests/integrations/: README.md  conftest.py  test_database_relationships.py  test_flow_coverage.py  test_full_flow.py  test_gcs_metadata_and_cleanup.py  test_linter_integration.py  test_refactored_flows.py  test_retry_command.py  test_retry_command_integration.py  test_uuid_pk.py
tests/providers/: test_ai.py  test_converter.py
tests/services/: test_analysis.py
tests/units/: README.md  conftest.py
(+184 files in other folders)
